  * po: Auto-upgrade old format settings to new formats when writing
    setup file.
  * Pass array of names of files that have been deleted to needsbuild hook
    as second parameter, to allow for plugins that needs access to this
    information earlier than the delete hook.
  * actiontabs: Improve tab padding.
  * blueview: Fix display of links to translated pages in the page header.

 -- Joey Hess <joeyh@debian.org>  Tue, 07 Sep 2010 12:08:05 -0400

ikiwiki (3.20100831) unstable; urgency=low

  * filecheck: Fall back to using the file command if the freedesktop
    magic file cannot identify a file.
  * flattr: New plugin. (Thanks to jaywalk for the initial implementation
    at a flattr plugin! This one is less configurable, but simpler.)
  * smiley: warn instead of error for missing smileys (Giuseppe Bilotta)
  * openid: Syntax tweak to the javascript code to make it work with MSIE 7
    (and MSIE 8 in compat mode). Thanks to Iain McLaren for reporting
    the bug and providing access to debug it.
  * style.css: Use relative, not absolute font sizes. Thanks, Giuseppe Bilotta.
  * htmlscrubber: Do not scrub url anchors that contain colons.
  * Danish translation update. Closes: #594673
  * highlight: Make location of highlight's files configurable in setup
    file to allow for nonstandard installations.
  * Allow "link(.)" and similar PageSpecs. Thanks, Giuseppe Bilotta.
  * Run the preprocess hooks in scan mode *before* the scan hooks.
    This allows the po plugin to register a scan hook that runs
    last and rescans pages after all data from the first scan pass is
    completed. This avoids the po plugin needing to rebuild some pages.
    (intrigeri)
  * po: Fix some bugs that affected l10n.ikiwiki.info's unusual
    setup. (intrigeri)
  * t/bazaar.t: Work around bzr 2.2.0's new requirement to configure
    bzr whoami before committing.
  * httpauth: Avoid redirecting the user to the cgiauthurl if
    they already have a login session.
