@@ -55,6 +55,8 @@ Some more elaborate limits can be added to what matches using these functions:
 * "`comment_pending(glob)`" - matches unmoderated, pending comments.
 * "`postcomment(glob)`" - matches only when comments are being 
   posted to a page matching the specified glob
+* "`currentlang()`" - always matches, unless [[translation|po]] is
+  enabled
 
 For example, to match all pages in a blog that link to the page about music
 and were written in 2005:
