@@ -17,6 +17,8 @@ ikiwiki (3.20100832) UNRELEASED; urgency=low
     information earlier than the delete hook.
   * actiontabs: Improve tab padding.
   * blueview: Fix display of links to translated pages in the page header.
+  * Make currentlang() usable when po is not enabled, so it can be used
+    in example blog's PageSpecs.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 07 Sep 2010 12:08:05 -0400
 
